classDiagram
    class Recensione{
        - str id_recensione
        - int voto
        - str data
        - str commento
        +  get_dettagli
        +  aggiorna_recensione
    }
   class Prodotto {
        -str id_prodotto
        -str nome
        -str descrizione
        -float prezzo
        -str categoria
        -list[Recensione] recensioni
        +get_dettagli()
        +aggiorna_prodotto()
    }
    class Ordine {
        -str id_ordine
        -str data_ordine
        -str data_consegna
        -str stato()
        -list[Prodotto] prodotti
        -float totale
        +get_dettagli()
        +aggiungi_prodotto()
        +rimuovi_prodotto()
        +aggiorna_stato()
    }

    class Cliente {
        -str id_cliente
        -str nome
        -str cognome
        -str email
        -str indirizzo
        -list[Ordine] ordini
        -list[Recensione] recensioni
        +get_info()
        +aggiungi_ordine()
        +aggiungi_recensione()
    }
Cliente "1" -- "*" Ordine : effettua
Ordine "*" -- "*" Prodotto : contiene
Cliente "*" -- "1" Recensione : scrive

%%Una piattaforma di e-commerce vuole creare un sistema per gestire i prodotti, i clienti, gli ordini e le recensioni. Il sistema deve essere in grado di tenere traccia dei prodotti disponibili, dei clienti registrati, degli ordini effettuati e delle recensioni dei prodotti.
%%
%%Requisiti
%%Ogni prodotto ha un ID, un nome, una descrizione, un prezzo e una categoria.
%%Ogni cliente ha un ID, un nome, un cognome, un'email e un indirizzo.
%%Ogni ordine ha un ID, una data di ordine, una data di consegna prevista e uno stato (in elaborazione, spedito, consegnato).
%%Ogni recensione ha un ID, un punteggio, una data e un commento.
%%Un cliente può effettuare più ordini, ma un ordine è associato a un solo cliente.
%%Un ordine può contenere più prodotti, e un prodotto può essere presente in più ordini.
%%Un cliente può scrivere più recensioni per diversi prodotti, ma una recensione è unica per ogni cliente e prodotto.